adding icons to statistics sections

--- a/index.html
+++ b/index.html
@@ -131,14 +131,17 @@
             <h2 class="text-uppercase text-center">Coronavirus disease outbreak situation</h2>
             <div class="row">
                 <div class="col-sm-4 col-lg-4 info">
+                    <h3><i class="fal fa-hospital"></i></h3>
                     <h3 id="total_cases"></h3>
                     <p>Confirmed cases</p>
                 </div>
                 <div class="col-sm-4 col-lg-4 info">
+                    <h3><i class="fal fa-heart-broken"></i></h3>
                     <h3 id="total_deaths"></h3>
                     <p>Confirmed deaths</p>
                 </div>
                 <div class="col-sm-4 col-lg-4 info">
+                    <h3><i class="fal fa-heartbeat"></i></h3>
                     <h3 id="total_recovered"></h3>
                     <p>Recovered cases</p>
                 </div>
@@ -149,6 +152,7 @@
                     <div class="card bg-light mb-3">
                         <div class="card-header text-uppercase text-center">active cases</div>
                         <div class="card-body">
+                            <h5 class="card-title text-center"><i class="fal fa-procedures"></i></h5>
                             <h5 class="card-title text-center" id="active_cases"></h5>
                             <h6 class="card-title text-center">Currently Infected Patients</h6>
                             <div class="row">
@@ -170,6 +174,7 @@
                     <div class="card bg-light mb-3">
                         <div class="card-header text-uppercase text-center">closed cases</div>
                         <div class="card-body">
+                            <h5 class="card-title text-center"><i class="fal fa-bed-empty"></i></h5>
                             <h5 class="card-title text-center" id="closed-cases"></h5>
                             <h6 class="card-title text-center">Cases which had an outcome</h6>
                             <div class="row">
